--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
-.container {
-    width: 100%;
+* {
     font-family: 'Courier New', Courier, monospace;
 }
 
-#board, #title, #result {
+.container {
+    width: 100%;
+}
+
+#board,
+#title,
+#result,
+#option {
     display: table;
     margin: 0 auto;
 }
@@ -21,7 +27,6 @@
 }
 
 input {
-    font-family: 'Courier New', Courier, monospace;
     color: red;
     border: 3px solid aliceblue;
     width: 40px;
@@ -33,6 +38,7 @@ input {
 
 #result {
     margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 button {
@@ -44,4 +50,41 @@ button {
 input:focus {
     outline: none;
     background-color: beige;
+}
+
+#option > button {
+    margin: 10px;
+}
+
+#level {
+    margin: 0 auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+#level > button {
+    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    margin: 20px;
+    height: 60px;
+    font-weight: bold;
+    word-break: break-word;
+}
+
+a {
+    text-decoration: none;
+}
+
+#easyBtn {
+    background-color: green;
+}
+
+#mediumBtn {
+    background-color: orange;
+}
+
+#hardBtn {
+    background-color: brown;
 }
