--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,23 @@ a {
 #hardBtn:hover {
     background-color: rgb(178, 47, 47);
 }
+
+.win {
+    color: green;
+}
+
+.wrong {
+    color: red;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
